@@ -6,6 +6,7 @@
 
 	T.vs200x_vcproj = { }
 
+
 --
 -- Configure a solution for testing
 --
@@ -409,5 +410,31 @@
 		]]
 	end
 
-
 		
+--
+-- Test manifest file handling.
+--
+
+	function T.vs200x_vcproj.VCManifestTool_OnNoManifests()
+		files { "hello.c", "goodbye.c" }
+		prepare()
+		premake.vs200x_vcproj_VCManifestTool(premake.getconfig(prj, "Debug"))
+		test.capture [[
+			<Tool
+				Name="VCManifestTool"
+			/>
+		]]
+	end
+
+
+	function T.vs200x_vcproj.VCManifestTool_OnNoManifests()
+		files { "hello.c", "project1.manifest", "goodbye.c", "project2.manifest" }
+		prepare()
+		premake.vs200x_vcproj_VCManifestTool(premake.getconfig(prj, "Debug"))
+		test.capture [[
+			<Tool
+				Name="VCManifestTool"
+				AdditionalManifestFiles="project1.manifest;project2.manifest"
+			/>
+		]]
+	end
